# arc-plugin-gcs

./: CLAUDE.md  README.md  pyproject.toml
docs/: PLUGIN_API.md
src/arc_plugin_example/: __init__.py  plugin.py
src/arc_plugin_example/tools/: example_tool.py
src/arc_plugin_gcs/: __init__.py  auth.py  budget.py  client.py  escalation.py  formatters.py  plugin.py  rates.py
src/arc_plugin_gcs/tools/: __init__.py  _base.py  file_ops.py  overview.py  sharing.py
tests/: conftest.py  test_auth_resolution.py  test_budget.py  test_client_allowlist.py  test_escalation_tiers.py  test_plugin.py  test_rates.py  test_tool.py  test_tools_file_ops.py  test_tools_overview.py  test_tools_sharing.py
