[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-plugin-example"
version = "0.1.0"
description = "Example arc plugin — fork this template to build your own."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["arc", "agent", "plugin"]

# arc itself is NOT a hard dependency — plugins import from `arc.plugin_api`,
# which is provided by the host process at runtime. Declare it as a dev/test
# dep only, so installing this package doesn't drag arc in for users who only
# want to inspect or build the wheel.
dependencies = []

[project.optional-dependencies]
# `pip install -e ".[dev]"` for local development against a checked-out arc.
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

# ── Entry point ────────────────────────────────────────────────────────────
# arc discovers plugins by walking the `arc.plugins` entry-point group.
# Each entry point resolves to a *builder callable* with signature:
#
#   def build(config: dict, build_ctx) -> object
#
# `config` is the plugin's config block from arc's config.yml.
# `build_ctx` is an arc.plugin_api.PluginBuildContext (bus, sessions_dir,
# session_id, user_gate). Return any object that implements one or more hook
# protocols and/or `provides_tools()`.
#
# The entry-point NAME is what appears in arc's config under `plugins.enabled`.
# Rename it when you fork this template.
[project.entry-points."arc.plugins"]
example = "arc_plugin_example.plugin:build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_plugin_example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
