[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-plugin-gcs"
version = "0.1.0"
description = "Google Cloud Storage tools for arc agents — list, upload, download, signed URLs, cost/budget guards."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["arc", "agent", "plugin", "gcs", "google-cloud-storage"]

# arc itself is NOT a hard dependency — plugins import from `arc.plugin_api`,
# which is provided by the host process at runtime. Declare it as a dev/test
# dep only, so installing this package doesn't drag arc in for users who only
# want to inspect or build the wheel.
#
# google-cloud-storage is the only runtime dep. It pulls in google-auth and
# google-api-core transitively; that's expected.
dependencies = [
  "google-cloud-storage>=2.10",
]

[project.optional-dependencies]
# `pip install -e ".[dev]"` for local development against a checked-out arc.
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

# ── Entry point ────────────────────────────────────────────────────────────
# arc discovers plugins by walking the `arc.plugins` entry-point group.
# This plugin registers under the name `gcs` — that's what users put in their
# config.yml under `plugins.enabled`.
[project.entry-points."arc.plugins"]
gcs = "arc_plugin_gcs.plugin:build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_plugin_gcs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
